--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "decimal.js": "^10.3.1",
-    "marked": "^4.0.15"
+    "marked": "^4.0.15",
+    "purs-backend-es": "^1.4.2"
   }
 }
